enabled User Login using Firebase:

--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -34,12 +34,9 @@ android {
         returnDefaultValues = true
     }
 
-//    dataBinding {
-//        enabled = true
-//        enabledForTests = true
-//    }
-    buildFeatures {
-        dataBinding true
+    dataBinding {
+        enabled = true
+        enabledForTests = true
     }
 }
 
